tests/ok/c-header-repr-array-fields.ari
@repr(C)
pub struct ApiArrayFields {
  bytes: [u8, 4],
  words: [i64, 2],
  word_ptr: ptr [i64, 2],
  word_ref: ref [i64, 2],
  word_mut: ref mut [i64, 2],
}

@repr(C)
pub struct ApiPairArray {
  words: [i64, 2],
}

@export("ari_array_fields")
pub fn array_fields(value: ptr ApiArrayFields) -> i64 {
  return 0;
}

@export("ari_array_pair_sum")
pub fn array_pair_sum(value: ApiPairArray) -> i64 {
  return value.words[0] + value.words[1];
}

@export("ari_array_ptr")
pub fn array_ptr(values: ptr [i64, 2]) -> i64 {
  return 0;
}

@export("ari_array_ref")
pub fn array_ref(values: ref [i64, 2]) -> i64 {
  return 0;
}

@export("ari_take_array")
pub fn take_array(values: [i64, 2]) -> i64 {
  return values[0] + values[1];
}

@export("ari_make_array")
pub fn make_array(seed: i64) -> [i64, 2] {
  return [seed, seed + 1];
}
